# hill-cipher

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/keys/: key_inv_2x2.txt
include/: hill_cipher.hpp  hill_cipher_io.hpp
src/: hill_cipher.cpp  io.cpp  main.cpp
tests/: regression.sh  test_hill_cipher.cpp
